ESP32_P4/esp_code/spi_func/build/log/idf_py_stdout_output_37810
Command: ninja all
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/home/codespace/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-527-gadcbdd7da4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/newlib/platform_include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/config/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/config/include/freertos -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/config/riscv/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/freertos/esp_additions/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/include/soc -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/dma/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/ldo/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/power_supply/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/port/esp32p4/. -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/port/esp32p4/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32p4/. -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/heap/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/heap/tlsf -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/log/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/soc/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/soc/esp32p4 -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/soc/esp32p4/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/soc/esp32p4/register -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/hal/platform_port/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/hal/esp32p4/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/hal/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_rom/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_rom/esp32p4/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_rom/esp32p4 -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_common/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_system/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_system/port/soc -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_system/port/include/riscv -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_system/port/include/private -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/riscv/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/spi_flash/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/driver/deprecated -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/driver/i2c/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/driver/touch_sensor/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/driver/twai/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_pm/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_ringbuf/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_gpio/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_pcnt/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_gptimer/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_spi/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_mcpwm/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_i2s/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_sdmmc/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_sd_intf/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/sdmmc/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_sdspi/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_sdio/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_dac/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_rmt/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_tsens/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_sdm/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_i2c/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_uart/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_ledc/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_parlio/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/esp_driver_twai/include -march=rv32imafc_zicsr_zifencei_xesppie -mabi=ilp32f    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/workspaces/NeedChange/ESP32_P4/esp_code/spi_func=. -fmacro-prefix-map=/workspaces/NeedChange/ESP32_P4/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj   -c ../main/hello_world_main.c
../main/hello_world_main.c: In function 'init_spi':
../main/hello_world_main.c:36:1: error: expected expression before '}' token
   36 | }
      | ^
../main/hello_world_main.c:36:1: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
../main/hello_world_main.c:18:6: note: declared here
   18 | void init_spi(spi_bus_config_t* buscfg, spi_device_interface_config_t* devcfg){
      |      ^~~~~~~~
../main/hello_world_main.c: In function 'app_main':
../main/hello_world_main.c:44:14: error: incompatible type for argument 1 of 'init_spi'
   44 |     init_spi(spi_bus_config, spi_device_config);
      |              ^~~~~~~~~~~~~~
      |              |
      |              spi_bus_config_t
../main/hello_world_main.c:18:33: note: expected 'spi_bus_config_t *' but argument is of type 'spi_bus_config_t'
   18 | void init_spi(spi_bus_config_t* buscfg, spi_device_interface_config_t* devcfg){
      |               ~~~~~~~~~~~~~~~~~~^~~~~~
../main/hello_world_main.c:44:30: error: incompatible type for argument 2 of 'init_spi'
   44 |     init_spi(spi_bus_config, spi_device_config);
      |                              ^~~~~~~~~~~~~~~~~
      |                              |
      |                              spi_device_interface_config_t
../main/hello_world_main.c:18:72: note: expected 'spi_device_interface_config_t *' but argument is of type 'spi_device_interface_config_t'
   18 | void init_spi(spi_bus_config_t* buscfg, spi_device_interface_config_t* devcfg){
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
[2/10] Performing build step for 'bootloader'
[1/1] cd /workspaces/NeedChange/ESP32_P4/esp_code/spi_func/build/bootloader/esp-idf/esptool_py && /home/codespace/.espressif/python_env/idf6.0_py3.12_env/bin/python /workspaces/NeedChange/ESP32_P4/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /workspaces/NeedChange/ESP32_P4/esp_code/spi_func/build/bootloader/bootloader.bin
Bootloader binary size 0x5910 bytes. 0x6f0 bytes (7%) free.
ninja: build stopped: subcommand failed.
